--- a/src/BBComponents/BBComponents.csproj
+++ b/src/BBComponents/BBComponents.csproj
@@ -3,6 +3,16 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RazorLangVersion>3.0</RazorLangVersion>
+    <Version>0.0.1</Version>
+    <Authors>Mikhail Zyubin</Authors>
+    <Description>Free components for Blazor created with Bootstrap css framework</Description>
+    <PackageId>ZyuDev.BBComponents</PackageId>
+    <PackageProjectUrl>https://github.com/ZyuDev/BBComponents</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/ZyuDev/BBComponents</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <Copyright>Mikhail Zyubin</Copyright>
+    <PackageTags>Blazor Components</PackageTags>
   </PropertyGroup>
 
 
