--- a/src/BBComponents/BBComponents.csproj
+++ b/src/BBComponents/BBComponents.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RazorLangVersion>3.0</RazorLangVersion>
-    <Version>0.1.2</Version>
+    <Version>0.1.3</Version>
     <Authors>Mikhail Zyubin</Authors>
     <Description>Free components for Blazor created with Bootstrap css framework</Description>
     <PackageId>ZyuDev.BBComponents</PackageId>
@@ -23,9 +23,26 @@
 
 
   <ItemGroup>
+    <Compile Update="Resources\BbResources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>BbResources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+
+  <ItemGroup>
     <Content Update="wwwroot\styles.css">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <EmbeddedResource Update="Resources\BbResources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>BbResources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
