--- a/src/BBComponents/BBComponents.csproj
+++ b/src/BBComponents/BBComponents.csproj
@@ -1,9 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RazorLangVersion>3.0</RazorLangVersion>
-    <Version>0.2.36</Version>
+    <Version>5.0.1</Version>
     <Authors>Mikhail Zyubin</Authors>
     <Description>Free components for Blazor created with Bootstrap css framework</Description>
     <PackageId>HubCloud.BBComponents</PackageId>
@@ -18,8 +18,8 @@
 
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.3" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Components" Version="5.0.12" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.12" />
   </ItemGroup>
 
 
