--- a/src/BBComponents/BBComponents.csproj
+++ b/src/BBComponents/BBComponents.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <RazorLangVersion>3.0</RazorLangVersion>
-    <Version>5.0.1</Version>
+    <Version>5.0.2</Version>
     <Authors>Mikhail Zyubin</Authors>
     <Description>Free components for Blazor created with Bootstrap css framework</Description>
     <PackageId>HubCloud.BBComponents</PackageId>
